--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=6.9"
   },
   "scripts": {
-    "build": "babel-node tools/build.js",
+    "build": "./node_modules/.bin/babel-node tools/build.js",
     "lint": "eslint src/**/*.js test/**/*.js tools/**/*.js",
     "start": "node dist/main.bundle.js",
     "test": "mocha"
