--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "pomoapp-server",
-  "version": "1.0.0",
-  "main": "dist/main.js",
+  "name": "pomoapp-backend",
+  "version": "0.0.0",
+  "description": "pomoapp-backend",
   "license": "MIT",
-  "engines": {
-    "node": ">=6.9"
-  },
+  "repository": "",
+  "author": "",
+  "keywords": [
+    ""
+  ],
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "./node_modules/.bin/babel-node tools/build.js",
-    "lint": "eslint src/**/*.js test/**/*.js tools/**/*.js",
-    "start": "node dist/main.bundle.js",
-    "test": "mocha"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
-    "babel-register": "^6.18.0",
-    "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
-    "eslint": "^3.9.1",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-import": "^2.1.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.6.0",
-    "mocha": "^3.1.2",
-    "shelljs": "^0.7.5",
-    "webpack": "^1.13.3",
-    "webpack-node-externals": "^1.5.4"
+    "start": "node dist/main.js",
+    "clean": "rimraf dist",
+    "lint": "tslint --format verbose \"src/**/*.ts\" \"test/**/*.ts\"",
+    "build": "npm run clean && npm run lint && echo Using TypeScript && tsc --version && tsc --pretty",
+    "test": "npm run build && mocha --compilers ts:ts-node/register --recursive test/**/*-spec.ts",
+    "watch": "npm run build -- --watch",
+    "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
     "express": "^4.14.0"
+  },
+  "devDependencies": {
+    "@types/chai": "^3.0.0",
+    "@types/express": "^4.0.34",
+    "@types/mocha": "^2.0.0",
+    "@types/node": "6.0.31",
+    "chai": "^3.0.0",
+    "mocha": "^3.0.0",
+    "rimraf": "^2.0.0",
+    "ts-node": "^1.0.0",
+    "tslint": "^4.0.2",
+    "tslint-microsoft-contrib": "^4.0.0",
+    "typescript": "^2.1.4"
+  },
+  "engines": {
+    "node": ">=4.0.0"
   }
 }
