--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
+    "@types/mongoose": "^4.7.1",
     "express": "^4.14.0",
+    "mongodb": "^2.2.16",
+    "mongoose": "^4.7.2",
     "pomoapp-frontend": "^1.0.2"
   },
   "devDependencies": {
