--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "preserveConstEnums": true,
     "removeComments": true,
     "noUnusedParameters": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "target": "ES6"
   },
   "include": [
     "src/**/*"
