--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
+    "@types/body-parser": "^0.0.33",
     "@types/mongoose": "^4.7.1",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongodb": "^2.2.16",
     "mongoose": "^4.7.2",
