--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "dependencies": {
     "@types/body-parser": "^0.0.33",
+    "@types/express-jwt": "^0.0.33",
     "@types/mongoose": "^4.7.1",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-jwt": "^5.1.0",
     "mongodb": "^2.2.16",
     "mongoose": "^4.7.2",
     "pomoapp-frontend": "^1.0.2"
