Working on Projects route

--- a/package.json
+++ b/package.json
@@ -9,7 +9,31 @@
   },
   "author": "strothj <jason@jasons.io>",
   "license": "MIT",
+  "scripts": {
+    "start": "node dist/main.js",
+    "clean": "rimraf dist",
+    "lint": "tslint \"src/**/*.ts\"",
+    "build": "npm run clean && npm run lint && tsc --pretty",
+    "test": "npm run build && mocha --compilers ts:ts-node/register --recursive src/**/*.spec.ts",
+    "watch": "npm run build -- --watch",
+    "watch:test": "npm run test -- --watch"
+  },
   "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.34",
+    "@types/node": "^6.0.52",
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "rimraf": "^2.5.4",
+    "ts-node": "^1.7.2",
+    "tslib": "^1.4.0",
+    "tslint": "^4.1.1",
     "typescript": "^2.1.4"
+  },
+  "dependencies": {
+    "@types/express": "^4.0.34",
+    "@types/mongoose": "^4.7.1",
+    "express": "^4.14.0",
+    "mongoose": "^4.7.4"
   }
 }
