--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,6 @@
     "newLine": "LF",
     "noImplicitAny": true,
     "removeComments": true,
-    "types": [
-      "node", "mocha"
-    ],
     "outDir": "./dist"
   },
   "include": [
@@ -18,6 +15,6 @@
   ],
   "exclude": [
     "node_modules",
-    "**/*-spec.ts"
+    "**/*.spec.ts"
   ]
 }
