--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "git@github.com:strothj/pomoapp-backend.git",
     "type": "git"
   },
+  "typings": "dist/index.d.ts",
   "author": "strothj <jason@jasons.io>",
   "license": "MIT",
   "scripts": {
@@ -20,20 +21,24 @@
   },
   "devDependencies": {
     "@types/chai": "^3.4.34",
+    "@types/chai-http": "^0.0.29",
     "@types/mocha": "^2.2.34",
     "@types/node": "^6.0.52",
     "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "mocha": "^3.2.0",
     "rimraf": "^2.5.4",
     "ts-node": "^1.7.2",
     "tslib": "^1.4.0",
     "tslint": "^4.1.1",
+    "tslint-microsoft-contrib": "^4.0.0",
     "typescript": "^2.1.4"
   },
   "dependencies": {
     "@types/express": "^4.0.34",
     "@types/mongoose": "^4.7.1",
     "express": "^4.14.0",
-    "mongoose": "^4.7.4"
+    "mongoose": "^4.7.4",
+    "pomoapp-frontend": "^1.0.2"
   }
 }
