Added Projects list get route

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "typescript": "^2.1.4"
   },
   "dependencies": {
+    "@types/body-parser": "^0.0.33",
     "@types/express": "^4.0.34",
     "@types/mongoose": "^4.7.1",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.7.4",
     "pomoapp-frontend": "^1.0.2"
