--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@types/mongoose": "^4.7.1",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "tslib": "^1.4.0",
     "mongoose": "^4.7.4",
-    "pomoapp-frontend": "^1.0.2"
+    "pomoapp-frontend": "^1.1.0",
+    "tslib": "^1.4.0"
   }
 }
