--- a/package.json
+++ b/package.json
@@ -35,12 +35,16 @@
   },
   "dependencies": {
     "@types/body-parser": "^0.0.33",
+    "@types/dotenv": "^2.0.19",
     "@types/express": "^4.0.34",
+    "@types/express-jwt": "^0.0.33",
     "@types/mongoose": "^4.7.1",
     "body-parser": "^1.15.2",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "express-jwt": "^5.1.0",
     "mongoose": "^4.7.4",
-    "pomoapp-frontend": "^1.1.0",
+    "pomoapp-frontend": "^1.2.0",
     "tslib": "^1.4.0"
   }
 }
